 * Elasticsearch scroll API is now used when fetching more than 100 search results (Karl Hobley)
 * Added hidden field to the form builder (Ross Crawford-d'Heureuse)
 * Usage count now shows on delete confirmation page when WAGTAIL_USAGE_COUNT_ENABLED is active (Kees Hink)
 * Added usage count to snippets (Kees Hink)
 * Moved usage count to the sidebar on the edit page (Kees Hink)
 * Fix: Do not remove stopwords when generating slugs from non-ASCII titles, to avoid issues with incorrect word boundaries (Sævar Öfjörð Magnússon)
 * Fix: The PostgreSQL search backend now preserves ordering of the `QuerySet` when searching with `order_by_relevance=False` (Bertrand Bordage)
 * Fix: Using `modeladmin_register` as a decorator no longer replaces the decorated class with `None` (Tim Heap)
 * Fix: Fixed crash in XML sitemap generator when all pages on the site are private (Stein Strindhaug)
 * Fix: The `{% routablepageurl %}` template tag no longer generates invalid URLs when the `WAGTAIL_APPEND_SLASH` setting was set to `False` (Venelin Stoykov)
 * Fix: The "View live" button is no longer shown if the page doesn't have a routable URL (Tim Heap)

1.13 (16.10.2017)
~~~~~~~~~~~~~~~~~

 * Front-end cache invalidator now supports purging URLs as a batch (Karl Hobley)
 * Custom document model is now documented (Emily Horsman)
 * Use minified versions of CSS in the admin by adding minification to the front-end tooling (Vincent Audebert, Thibaud Colas)
 * Wagtailforms serve view now passes `request.FILES`, for use in custom form handlers (LB (Ben Johnston))
 * Documents and images are now given new filenames on re-uploading, to avoid old versions being kept in cache (Bertrand Bordage)
 * Added custom 404 page for admin interface (Jack Paine)
 * Breadcrumb navigation now uses globe icon to indicate tree root, rather than home icon (Matt Westcott)
 * Updated React to 15.6.2 due to relicensing (Janneke Janssen)